[package]
name = "pg-http-proxy"
version = "0.1.5"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
once_cell = "1.19.0"
env_logger = "0.11.8"
log = "0.4"
